Filemanager icons spacing fix

--- a/scss/_csstree.scss
+++ b/scss/_csstree.scss
@@ -92,7 +92,7 @@
 				right:5px;
 				
 				.btn {
-					padding:0.25rem 0.3rem;
+					padding:0.1rem 0.3rem;
 					font-size:0.875rem;
 					line-height:1;
 					border-radius:4px;
@@ -155,14 +155,14 @@
 
 		li input:checked + ol
 		{
-			background: url(../libs/builder/icons/arrow-down.svg) 5px .1rem no-repeat;
+			background: url(../libs/builder/icons/arrow-down.svg) 5px .6rem no-repeat;
 			background-size:12px 12px;
 			margin: -2.5em 0 0 0rem;
-			padding: 2rem 0 0 2rem;
+			padding: 2rem 0 0 2.5rem;
 			height: auto;
 
-			> li { display: block; margin: 0 0 0.5em;  /* 2px */}
-			> li:last-child { margin: 0 0 0.7em; /* 1px */ }
+			> li { display: block; margin: 0 0 0.2em;  /* 2px */}
+			> li:last-child { margin: 0 0 0.3em; /* 1px */ }
 		}
 	}
 }
